# letrus-plagiarism

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
api/: Dockerfile  data.py  main.py  match.py  pyproject.toml  split.py
api/models/: corpus.py  document.py  request.py  response.py
api/tests/: test_api.py  test_compare.py
api/utils/: banner.py  config.py  encoder.py
ui/: Dockerfile  app.py  pyproject.toml  streamlit.py
