[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "letrus-plagiarism"
version = "0.1.0"
description = "Plagiarism checker API with PT-BR Wikipedia corpus"
authors = [{ name = "Candidate" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "scikit-learn>=1.4",
  "pandas>=2.2",
  "numpy>=1.26",
  "sentence-transformers>=3.0",
  "torch>=2.2",
  "datasets>=2.20",
  "requests>=2.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
