[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "letrus-ui"
version = "0.1.0"
description = "Plagiarism checker UI"
authors = [{ name = "Candidate" }]
requires-python = ">=3.10"
dependencies = [
  "streamlit"
]

[project.optional-dependencies]
dev = []

[tool.ruff]
line-length = 100
